policy_update/istio-opa/service-entry.yml
############################################################
# ServiceEntry to register the OPA-Istio sidecars as external authorizers.
# Uses ServiceEntry to register OPA sidecars as part of the external authorizers for Istio.
############################################################
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: opa-ext-authz-grpc-local
spec:
  hosts:
    - "opa-ext-authz-grpc.local"
  exportTo:
    - "."
  endpoints:
    - address: "127.0.0.1"
  ports:
    - name: grpc
      number: 9191
      protocol: GRPC
  resolution: STATIC
